--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "@types/react-datepicker": "^4.1.4",
+    "date-fns": "^2.23.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2"
   }
 }
