Create settings page and settings type

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -28,7 +28,8 @@
     "permissions": [
         "storage",
         "idle",
-        "tabs"
+        "tabs",
+        "notifications"
     ],
     "manifest_version": 2
 }
