--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-screen-time",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Keep track of the amount of time you spend on the internet",
   "main": "background.js",
   "scripts": {
@@ -24,26 +24,26 @@
   },
   "homepage": "https://github.com/aaaeka/browser-screen-time#readme",
   "devDependencies": {
-    "@types/chrome": "0.0.149",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
-    "@types/webextension-polyfill": "^0.8.0",
-    "@types/react-datepicker": "^4.1.4",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
-    "sass": "^1.36.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "ts-loader": "^9.2.4",
-    "typescript": "^4.3.5",
+    "@types/chrome": "^0.0.244",
+    "@types/react": "^18.2.21",
+    "@types/react-datepicker": "^4.15.0",
+    "@types/react-dom": "^18.2.7",
+    "@types/webextension-polyfill": "^0.10.2",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
     "webextension-polyfill-ts": "^0.26.0",
-    "webpack": "^5.47.0",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "date-fns": "^2.23.0",
-    "react": "^17.0.2",
-    "react-datepicker": "^4.2.1",
-    "react-dom": "^17.0.2"
+    "date-fns": "^2.30.0",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
+    "react-dom": "^18.2.0"
   }
 }
