--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,23 @@
 {
     "name": "Browser Screen Time",
     "short_name": "Screen Time",
-    "version": "1.1.3",
+    "version": "1.2.0",
     "description": "Keep track of the amount of time you spend on the internet",
     "background": {
         "scripts": [ "background.js" ]
     },
-    "browser_action": {
+    "action": {
         "default_title": "Screen Time",
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "assets/icons/16px.png",
+            "32": "assets/icons/32px.png",
+            "64": "assets/icons/64px.png",
+            "128": "assets/icons/128px.png",
+            "256": "assets/icons/256px.png",
+            "512": "assets/icons/512px.png",
+            "1024": "assets/icons/1024px.png"
+        }
     },
     "content_scripts": [{
         "matches": [ "*://*/*" ],
@@ -31,5 +40,5 @@
         "tabs",
         "notifications"
     ],
-    "manifest_version": 2
+    "manifest_version": 3
 }
