Remove webextension-polyfill-ts

--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
-    "webextension-polyfill-ts": "^0.26.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
@@ -44,6 +43,7 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webextension-polyfill": "^0.12.0"
   }
 }
