--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,12 @@
     "short_name": "Screen Time",
     "version": "1.3.0",
     "description": "Keep track of the amount of time you spend on the internet",
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "browser-screen-time@aaaeka",
+            "strict_min_version": "109.0"
+        }
+    },
     "background": {
         "scripts": [ "background.js" ]
     },
